--- a/dalie-backend/package.json
+++ b/dalie-backend/package.json
@@ -7,9 +7,11 @@
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
+    "react-hot-toast": "^2.5.2",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "typedi": "^0.10.0",
