--- a/finalyear/package.json
+++ b/finalyear/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.3.3",
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "sequelize": "^6.37.7",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.17.57",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/socket.io": "^3.0.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "typescript": "^5.3.3"
