--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.3"
+    "@types/node": "^24.0.0",
+    "@types/sequelize": "^4.28.20",
+    "sequelize-cli": "^6.6.3",
+    "typescript": "^5.8.3"
   }
 }
